messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: django-messaging-app
spec:
replicas: 1
selector:
matchLabels:
app: django-messaging
template:
metadata:
labels:
app: django-messaging
spec:
containers:
- name: django-container
image: your-docker-username/django-messaging-app:2.0
ports:
- containerPort: 8000
