messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging
  template:
    metadata:
      labels:
        app: django-messaging
    spec:
      containers:
        - name: django-container
          image: ideonmensah/django-messaging-app:latest
          ports:
            - containerPort: 8000
          command: ["python"]
          args: ["manage.py", "runserver", "0.0.0.0:8000"]

---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  type: ClusterIP
  selector:
    app: django-messaging
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
